Struct invoke exact (#47)